Refactor event and note management: removed date parameters from creation methods, updated event relationships, and improved UI navigation in the timeline controller. Enhanced element editing functionality and adjusted FXML layout for better usability.